<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nPuzzle6303307</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="title_activity_you_won">YouWon</string>
    <string name="choose_pic">Choose your Club</string>
    <string name="restart_button">Restart</string>
    <string name="easy_button">Easy</string>
    <string name="medium_button">Medium</string>
    <string name="hard_button">Hard</string>
    <string name="new_game_button">New Game</string>
    <string name="congratz">Congratulations!</string>
    <string name="solved">You solved the puzzle!</string>
    <string name="resume_game">Do you want to resume previous game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_game">New Game!</string>
    <string name="quit_game">Are you sure you want to start a new game?</string>

    <string-array name="images">
        <item>Picture 1</item>
        <item>Picture 2</item>
        <item>Picture 3</item>
        <item>Picture 4</item>
        <item>Picture 5</item>
        <item>Picture 6</item>
        <item>Picture 7</item>
        <item>Picture 8</item>
        <item>Picture 9</item>
    </string-array>

    <string name="title_activity_custom_list">CustomList</string>
    <string name="title_activity_count_down">CountDown</string>
    <string name="title_activity_resume_game">ResumeGame</string>
    <string name="title_activity_quit_game">QuitGame</string>

</resources>
